--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -5,7 +5,7 @@
 <!-- /Form -->
 
 <!-- /Grid Table -->
-<div class="grid-container">
+<div class="grid-container" [ngStyle]="{'align-items': result_List.length > 5 ? 'stretch':'start'}">
   <div class="grid-header">
     <div>#</div>
     <div>姓名</div>
@@ -13,36 +13,36 @@
     <div>工號</div>
     <div>權限</div>
     <div>年資</div>
+    <div>本月報工</div>
+    <div>本月報修</div>
   </div>
   <div class="grid-body">
     <!-- <tr *ngFor="let item of result_Async$ | async; index as i" [ngClass]="{'text-light bg-dark': item?.e_Id == fb_Value['e_Id'].value}" (click)="choose(item)"> -->
-    <div class="grid-content" *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)"
+    <div class="grid-content" *ngFor="let item of result_List; let i = index" (click)="choose(item)"
       [ngClass]="{'grid-selected': item?.e_Id == fb_Value_Index[0]}">
       <div>{{i+1}}</div>
-      <div [class.suspension]="item.e_Lv==0">
-        <span>
+      <div [class.suspension]="item.e_Lv == 0">
           {{ item.e_Name }}
-        </span>
       </div>
       <div>
-        <span>
           {{ item.e_Email }}
-        </span>
       </div>
       <div>
-        <span>
           {{ item.e_JobNumber }}
-        </span>
       </div>
       <div>
         <ngb-rating [rate]="item.e_Lv" readonly="true" class="h6"></ngb-rating>
       </div>
       <div>
-        <span>
           {{ item.e_Date | splite:2:',' }}年
           /
           {{ item.e_Date | splite:3:',' }}月
-        </span>
+      </div>
+      <div>
+          {{ item.wkcount }} 筆
+      </div>
+      <div>
+          {{ item.rpcount }} 筆
       </div>
     </div>
   </div>
