--- a/client/src/app/components/employee/employee.component.scss
+++ b/client/src/app/components/employee/employee.component.scss
@@ -6,7 +6,7 @@
 .grid-header
 {
   display: grid;
-  grid-template-columns: 30px 150px 200px 150px 150px 150px;
+  grid-template-columns: 30px 150px 150px 70px 100px 150px 80px 80px;
   grid-template-rows: 1fr;
   gap: 0 0.2em;
   font-weight: 600;
@@ -15,11 +15,20 @@
 .grid-content
 {
   display: grid;
-  grid-template-columns: 30px 150px 200px 150px 150px 150px;
+  grid-template-columns: 30px 150px 150px 70px 100px 150px 80px 80px;
   gap: 0 0.2em;
   cursor: pointer;
 }
-.suspension::before
+/** Suspension ***/
+div.suspension
+{
+  position: relative;
+}
+// div:has(> .suspension)
+// {
+//   position: relative;
+// }
+div.suspension::before
 {
   content: '停權';
   position: absolute;
