--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -18,8 +18,8 @@
   <!-- Footer -->
   <div class="modal-footer d-flex justify-content-between">
     <button type="button" class="btn btn-outline-secondary btn-sm" (click)="close()">取消</button>
-    <button type="button" [ngClass]="['btn btn-sm', fb_Value_Index[0] ? 'btn-outline-warning':'btn-outline-info']" (click)="fbGroup.valid && save()"
-      [disabled]="!fbGroup.valid">確定</button>
+    <button type="button" [ngClass]="['btn btn-sm', fb_Value_Index[0] ? 'btn-outline-warning':'btn-outline-info']" (click)="save()"
+    >確定</button>
   </div>
   <!-- /Footer -->
 </ng-template>
