--- a/client/src/app/components/repair/repair.component.scss
+++ b/client/src/app/components/repair/repair.component.scss
@@ -15,18 +15,35 @@
   cursor: pointer;
 }
 /** Form Items Scroll ***/
-.items-scroll
-{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-right: -5px;
+// .items-scroll
+// {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//   margin-right: -5px;
+//   margin-left: -5px;
+//   align-items: flex-start;
+//   height: 275px;
+//   padding-left: 2px;
+//   overflow-y: scroll;
+//   scroll-padding-top: 3px;
+//   scroll-snap-type: y mandatory;
+//   overscroll-behavior-y: contain;
+// }
+
+.items-scroll {
+  display: grid;
+  grid-template-rows: repeat(1fr, 1fr);
+  gap: 2px 0;
+  margin-right: -8px;
   margin-left: -5px;
-  align-items: flex-start;
-  height: 275px;
-  padding-left: 2px;
+  padding-top: 2px;
+  padding-right: 1px;
+  padding-bottom: 2px;
+  justify-content: center;
+  max-height: 268px;
   overflow-y: scroll;
-  scroll-padding-top: 3px;
+  scroll-padding-top: 2px;
   scroll-snap-type: y mandatory;
   overscroll-behavior-y: contain;
 }
