--- a/client/src/app/components/work/work.component.scss
+++ b/client/src/app/components/work/work.component.scss
@@ -1,63 +1,66 @@
 /** Grid Table ***/
-.grid-header
-{
+.grid-header {
   display: grid;
-  grid-template-columns: 26px 145px 150px 150px 150px 150px 75px 50px 485px 90px;
+  grid-template-columns: 26px 145px 170px 170px 150px 50px 70px 70px 530px 90px;
   grid-template-rows: 1fr;
   gap: 0 0.2em;
   font-weight: 600;
 }
-.grid-content
-{
+.grid-content {
   display: grid;
-  grid-template-columns: 26px 145px 150px 150px 150px 150px 75px 50px 485px 90px;
+  grid-template-columns: 26px 145px 170px 170px 150px 50px 70px 70px 530px 90px;
   gap: 0 0.2em;
   cursor: pointer;
 }
 /** Form Items Scroll ***/
-.items-scroll
-{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-right: -5px;
+.items-scroll {
+  display: grid;
+  grid-template-rows: repeat(1fr, 1fr);
+  gap: 2px 0;
+  margin-right: -8px;
   margin-left: -5px;
-  align-items: flex-start;
-  height: 272px;
-  padding-left: 2px;
+  padding-top: 2px;
+  padding-right: 1px;
+  padding-bottom: 2px;
+  justify-content: center;
+  max-height: 395px;
   overflow-y: scroll;
-  scroll-padding-top: 3px;
+  scroll-padding-top: 2px;
   scroll-snap-type: y mandatory;
   overscroll-behavior-y: contain;
-}
-.items-scroll::-webkit-scrollbar
-{
-  height: 0px;
-  width: 2px;
 }
 .items-scroll div
 {
   scroll-snap-align: start;
 }
+.items-scroll::-webkit-scrollbar {
+  width: 2px;
+}
 /*** Date Input ***/
-.datetime-font-size
-{
+.datetime-font-size {
   font-size: .8em;
 }
-/*** @media only screen ***/
-@media (max-width: 860px)
+.input-group-span
 {
+  width: 60px;
+  border: none;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  font-size: 18px !important;
+}
+/*** @media only screen ***/
+@media (max-width: 860px) {
+
   /** Grid Table ***/
-  .grid-header
-  {
+  .grid-header {
     grid-template-columns: 1fr;
-    grid-template-rows: 22px 40px 40px 40px 110px 110px 25px 25px 185px 24px;
+    grid-template-rows: 22px 40px 110px 110px 25px 25px 40px 40px 185px 24px;
     gap: 0.2em 0;
   }
-  .grid-content
-  {
+
+  .grid-content {
     grid-template-columns: 1fr;
-    grid-template-rows: 22px 40px 40px 40px 110px 110px 25px 25px 185px 24px;
+    grid-template-rows: 22px 40px 110px 110px 25px 25px 40px 40px 185px 24px;
     gap: 0.2em 0;
   }
 }
